crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_bad_type_arity.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped, Maybe(..))\n\ntype alias Wrapped = Maybe\n\ntype Maybe a\n    = Just a\n    | Nothing\n"
---
BadArity {
    region: Region {
        start: Position {
            line: 3,
            column: 22,
        },
        end: Position {
            line: 3,
            column: 27,
        },
    },
    context: TypeArity,
    name: "Maybe",
    expected: 1,
    actual: 0,
}
