crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_missing_exported_values.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (main)\n"
---
[
    ExportNotFound {
        region: Region {
            start: Position {
                line: 1,
                column: 23,
            },
            end: Position {
                line: 1,
                column: 27,
            },
        },
        kind: BadVar,
        name: "main",
        suggestions: [],
    },
]
