crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_exported_upper_names.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Missing)\n"
---
[
    ExportNotFound {
        region: Region {
            start: Position {
                line: 1,
                column: 23,
            },
            end: Position {
                line: 1,
                column: 30,
            },
        },
        kind: BadType,
        name: "Missing",
    },
]
