crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\ntype alias Wrapped = Missing\n"
---
NotFoundType {
    region: Region {
        start: Position {
            line: 3,
            column: 22,
        },
        end: Position {
            line: 3,
            column: 29,
        },
    },
    prefix: None,
    name: "Missing",
}
