crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_reports_unresolved_qualified_named_types.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Wrapped)\n\ntype alias Wrapped = Missing.Maybe\n"
---
NotFoundType {
    region: Region {
        start: Position {
            line: 3,
            column: 22,
        },
        end: Position {
            line: 3,
            column: 35,
        },
    },
    prefix: Some(
        "Missing",
    ),
    name: "Maybe",
}
