crates/nash-can/src/snapshots/nash_can__module__tests__module_shell_with_enum_union.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (Bool(..))\n\ntype Bool\n    = True\n    | False\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 30,
                    },
                },
                value: UnionOpen(
                    "Bool",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 6,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 6,
                    column: 1,
                },
            },
            value: Union {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 10,
                        },
                    },
                    value: "Bool",
                },
                parameters: [],
                ctors: [
                    Ctor {
                        name: "True",
                        index: 0,
                        arity: 0,
                        arguments: [],
                    },
                    Ctor {
                        name: "False",
                        index: 1,
                        arity: 0,
                        arguments: [],
                    },
                ],
                alternatives: 2,
                options: Enum,
            },
        },
    ],
    aliases: [],
    binops: [],
}
